css/style.css
@import url("photographer.css");
@import 'theme-colors.css';


body {
    font-family: "DM Sans", sans-serif;
    max-width: 1200px; /* Set the maximum width */
    margin: 0 auto; 
}


header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 90px;
}


main {
    margin: 0 100px;
}



h1 {
    color: var(--red);
    margin-right: 100px;
}

.logo {
    height: 50px;
    margin-left: 100px;
}

.photographers-section {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 70px;
    margin-top: 100px;
}

.photographers-section figure {
/*    justify-self: center;
    display: flex;
    justify-content: center;
    align-items: center;*/
    flex-direction: column;
    text-align: center;

}

.photographers-section  h2 {
    color: var(--red);
    font-size: 2rem;
    font-weight: lighter;
    line-height: 0.6rem;
    text-wrap: nowrap;
}

.photographer-portrait {
    height: 200px;
    width: 200px;
    border-radius: 50%;
    object-fit: cover;
    /* justify-self: center; */
}

.photographers-section p {
    font-size: 0.8rem;
    line-height: 0.2rem;
    text-align: center;
    white-space: nowrap;
}

.photographers-section .location {
    color: var(--red);
}

.photographers-section .tagline {
    color: var(--black);
}

.photographers-section .price {
    color: gray;
}

